syntax = "proto3";

option csharp_namespace = "UpFlux.Gateway.Server.Protos";

package update;

import "google/protobuf/empty.proto";

// Service definition for update distribution
service UpdateService {
  rpc SendUpdatePackage (UpdatePackageRequest) returns (google.protobuf.Empty);
}

// Message definitions

message UpdatePackageRequest {
  string fileName = 1;           // The .deb package name
  bytes packageData = 2;         // The raw .deb content
  repeated string targetDevices = 3;  // Target device UUID(s)
}
